Form Modified Advance

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    <div class="bg"></div>
-    <div class="star-field">
-      <div class="layer"></div>
-      <div class="layer"></div>
-      <div class="layer"></div>
+    <div className="bg"></div>
+    <div className="star-field">
+      <div className="layer"></div>
+      <div className="layer"></div>
+      <div className="layer"></div>
   </div>
 </body>
 </html>
